--- a/style.css
+++ b/style.css
@@ -1,1 +1,15 @@
-p{color:#456743;}
+/* Оформление параграфов */
+#page {
+       width: 960px;
+       margin: auto;         
+}
+
+.strong-red{
+    font-weight: bolder;
+    color:red;
+}
+
+.light-blue {
+    font-weight: lighter;
+    color: blue;
+}
