--- a/style.css
+++ b/style.css
@@ -1,18 +1,27 @@
+@import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic&subset=latin,cyrillic);
 /* Оформление параграфов */
-body{
-    background: #333333 url(images/12.jpg) repeat top left;
-}
-#page {
-       width: 960px;
-       margin: auto;         
-}
-
-.strong-red{
-    font-weight: bolder;
-    color:red;
+body{  
+    
+    background: #777777 url(images/54.jpg)repeat left; 
+   
+    
 }
 
-.light-blue {
-    font-weight: lighter;
-    color: blue;
+#page{
+    width: 960px;
+    margin: 0 auto;
+}
+
+strong-red {
+    font-weight: bold;
+    color: red;
+    font-family: 'Open Sans Condensed', sans-serif;
+}
+
+light-blue{
+    font-weight: :bold;
+    color:#6c6269
+}
+light-blue {
+    font-size:18px
 }
